# Dumpy

./: .gitignore  CMakeLists.txt  config.ini
include/: Const.h
include/DataStructures/: DumpyNode.h
include/Searchers/: Recall.h
include/Utils/: FileUtil.h  TimeSeriesUtil.h
src/: CMakeLists.txt  Const.cpp  main.cpp  util.cpp  util.h
src/IndexConstruction/: CMakeLists.txt  DumpyNode.cpp
src/SearchEngine/: CMakeLists.txt  Recall.cpp
src/Utils/: CMakeLists.txt  FileUtil.cpp  SaxUtil.cpp  TimeSeriesUtil.cpp
